# takserver-api-python

./: .gitignore  README.md  pyproject.toml
src/takserver/: __init__.py  class_helpers.py  tak_class.py  tak_file_user_account_management_api.py  tak_home_api.py  tak_mission_api.py
takserver/: __init__.py  _tak_class.py  _tak_file_user_account_management_api.py  _tak_home_api.py  _tak_mission_api.py
