[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "takserver-api-python"
version = "0.0.1"
description = "Python helper module for talking to the (tak.gov) TAK server API."
readme = "README.md"
authors = [{ name="Stefan Gofferje", email="hello@gofferje.net" }]
requires-python = ">=3.12"
dependencies = []
classifiers = [
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
